--- a/type-lists/text.yaml
+++ b/type-lists/text.yaml
@@ -40,9 +40,12 @@
   references:
   - IANA
   - RFC5545
+  - ! '{text/calendar=http://www.iana.org/assignments/media-types/text/calendar}'
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc5545
+    template:
+    - text/calendar
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/comma-separated-values
@@ -62,9 +65,12 @@
   references:
   - IANA
   - RFC2318
+  - ! '{text/css=http://www.iana.org/assignments/media-types/text/css}'
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc2318
+    template:
+    - text/css
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/csv
@@ -88,7 +94,6 @@
   content-type: text/directory
   encoding: quoted-printable
   obsolete: true
-  use-instead: ''
   references:
   - IANA
   - RFC2425
@@ -97,6 +102,21 @@
     rfc:
     - rfc2425
     - rfc6350
+  registered: true
+- !ruby/object:MIME::Type
+  content-type: text/directory - DEPRECATED by RFC6350
+  encoding: quoted-printable
+  references:
+  - IANA
+  - RFC2425
+  - RFC6350
+  - ! '{text/directory=http://www.iana.org/assignments/media-types/text/directory}'
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc2425
+    - rfc6350
+    template:
+    - text/directory
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/dns
@@ -115,6 +135,8 @@
   content-type: text/ecmascript
   encoding: quoted-printable
   obsolete: true
+  use-instead:
+  - application/ecmascript
   references:
   - IANA
   - RFC4329
@@ -199,12 +221,12 @@
   - htx
   references:
   - IANA
-  - ! '[Michael_TM_Smith]'
   - ! '[W3C]'
+  - ! '[Robin_Berjon]'
   - ! '{text/html=http://www.iana.org/assignments/media-types/text/html}'
   xrefs: !ruby/hash:MIME::Types::Container
     person:
-    - Michael_TM_Smith
+    - Robin_Berjon
     - W3C
     template:
     - text/html
@@ -215,6 +237,8 @@
   extensions:
   - js
   obsolete: true
+  use-instead:
+  - application/javascript
   references:
   - IANA
   - RFC4329
@@ -259,8 +283,8 @@
   - n3
   references:
   - IANA
-  - ! '[Eric_Prudhommeaux]'
   - ! '[W3C]'
+  - ! '[Eric_Prudhommeaux]'
   - ! '{text/n3=http://www.iana.org/assignments/media-types/text/n3}'
   xrefs: !ruby/hash:MIME::Types::Container
     person:
@@ -334,12 +358,15 @@
   encoding: quoted-printable
   references:
   - IANA
-  - ! '[Ivan_Herman]'
   - ! '[W3C]'
+  - ! '[Ivan_Herman]'
+  - ! '{text/provenance-notation=http://www.iana.org/assignments/media-types/text/provenance-notation}'
   xrefs: !ruby/hash:MIME::Types::Container
     person:
     - Ivan_Herman
     - W3C
+    template:
+    - text/provenance-notation
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/prs.fallenstein.rst
@@ -391,9 +418,12 @@
   references:
   - IANA
   - RFC4102
+  - ! '{text/RED=http://www.iana.org/assignments/media-types/text/RED}'
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc4102
+    template:
+    - text/RED
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/rfc822-headers
@@ -401,9 +431,12 @@
   references:
   - IANA
   - RFC6522
+  - ! '{text/rfc822-headers=http://www.iana.org/assignments/media-types/text/rfc822-headers}'
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc6522
+    template:
+    - text/rfc822-headers
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/richtext
@@ -497,9 +530,12 @@
   references:
   - IANA
   - RFC4103
+  - ! '{text/t140=http://www.iana.org/assignments/media-types/text/t140}'
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc4103
+    template:
+    - text/t140
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/tab-separated-values
@@ -532,9 +568,12 @@
   references:
   - IANA
   - RFC4263
+  - ! '{text/troff=http://www.iana.org/assignments/media-types/text/troff}'
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc4263
+    template:
+    - text/troff
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/turtle
@@ -544,8 +583,8 @@
   - ttl
   references:
   - IANA
-  - ! '[Eric_Prudhommeaux]'
   - ! '[W3C]'
+  - ! '[Eric_Prudhommeaux]'
   - ! '{text/turtle=http://www.iana.org/assignments/media-types/text/turtle}'
   xrefs: !ruby/hash:MIME::Types::Container
     person:
@@ -578,9 +617,12 @@
   references:
   - IANA
   - RFC2483
+  - ! '{text/uri-list=http://www.iana.org/assignments/media-types/text/uri-list}'
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc2483
+    template:
+    - text/uri-list
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/vcard
@@ -590,9 +632,12 @@
   references:
   - IANA
   - RFC6350
+  - ! '{text/vcard=http://www.iana.org/assignments/media-types/text/vcard}'
   xrefs: !ruby/hash:MIME::Types::Container
     rfc:
     - rfc6350
+    template:
+    - text/vcard
   registered: true
   signature: true
 - !ruby/object:MIME::Type
@@ -1135,11 +1180,11 @@
   - dtd
   references:
   - IANA
-  - DRAFT:draft-ietf-appsawg-xml-mediatypes-10
+  - RFC7303
   - ! '{text/xml=http://www.iana.org/assignments/media-types/text/xml}'
   xrefs: !ruby/hash:MIME::Types::Container
-    draft:
-    - RFC-ietf-appsawg-xml-mediatypes-10
+    rfc:
+    - rfc7303
     template:
     - text/xml
   registered: true
@@ -1148,11 +1193,11 @@
   encoding: quoted-printable
   references:
   - IANA
-  - DRAFT:draft-ietf-appsawg-xml-mediatypes-10
+  - RFC7303
   - ! '{text/xml-external-parsed-entity=http://www.iana.org/assignments/media-types/text/xml-external-parsed-entity}'
   xrefs: !ruby/hash:MIME::Types::Container
-    draft:
-    - RFC-ietf-appsawg-xml-mediatypes-10
+    rfc:
+    - rfc7303
     template:
     - text/xml-external-parsed-entity
   registered: true
